bridge/base/0-aiproject-namespace.yaml
#! 0-aiproject-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: aiproject
    labels:
        com.docker.compose.project: aiproject
