bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: aiproject
    labels:
        com.docker.compose.project: aiproject
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: aiproject
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: aiproject
                com.docker.compose.service: app
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: app
                  image: aiproject-app
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: app-8082
                      containerPort: 8082
