bridge/base/app-expose.yaml
#! app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: aiproject
    labels:
        com.docker.compose.project: aiproject
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: aiproject
        com.docker.compose.service: app
    ports:
        - name: app-8082
          port: 8082
          targetPort: app-8082
