bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: aiproject
    labels:
        com.docker.compose.project: aiproject
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: aiproject
        com.docker.compose.service: app
    ports:
        - name: app-8082
          port: 8082
          protocol: TCP
          targetPort: app-8082

# check if there is at least one published port
