bridge/base/mariadb-service.yaml
#! mariadb-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mariadb-published
    namespace: aiproject
    labels:
        com.docker.compose.project: aiproject
        com.docker.compose.service: mariadb
spec:
    selector:
        com.docker.compose.project: aiproject
        com.docker.compose.service: mariadb
    ports:
        - name: mariadb-3308
          port: 3308
          protocol: TCP
          targetPort: mariadb-3306
